// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadingCell should match the snapshot 1`] = `
<styled.th>
  <Styled(IoIosArrowUp)
    shouldDisplay={false}
  />
</styled.th>
`;

exports[`TableHeadingCell should match the snapshot when beingSorted and order is "asc"  1`] = `
<styled.th>
  <Styled(IoIosArrowDown)
    shouldDisplay={true}
  />
</styled.th>
`;

exports[`TableHeadingCell should match the snapshot when beingSorted and order is "desc"  1`] = `
<styled.th>
  <Styled(IoIosArrowUp)
    shouldDisplay={true}
  />
</styled.th>
`;
